--- a/charts/thoras/tests/api_service_deployment_test.yaml
+++ b/charts/thoras/tests/api_service_deployment_test.yaml
@@ -1,6 +1,9 @@
 suite: API Service Layer Deployment
 templates:
   - api-server-v2/deployment.yaml
+set:
+  thorasMonitor:
+    unittesting: true
 tests:
   - it: Should set tolerations if specified
     set:
