Enable feature flags by default

--- a/charts/thoras/values.yaml
+++ b/charts/thoras/values.yaml
@@ -178,6 +178,9 @@ thorasDashboard:
     annotations: {}
   extras:
     show_savings: true
+    cost_analysis: true
+    cost_simulator: true
+    rolling_savings: true
 
 thorasMonitor:
   enabled: false
