--- a/charts/thoras/tests/collector_deployment_test.yaml
+++ b/charts/thoras/tests/collector_deployment_test.yaml
@@ -18,6 +18,8 @@ tests:
           path: spec.template.spec.containers[?(@.name == 'timescaledb')].image
           value: us-east4-docker.pkg.dev/thoras-registry/platform/timescaledb:2.21.3-pg16
   - it: Default containers should match snapshots
+    chart:
+      version: "4.50.0"
     set:
       thorasVersion: dev
     asserts:
