--- a/charts/thoras/templates/worker/deployment.yaml
+++ b/charts/thoras/templates/worker/deployment.yaml
@@ -44,6 +44,8 @@ spec:
               secretKeyRef:
                 name: thoras-timescale-password
                 key: host
+          - name: DATABASE_URL
+            value: "$(DATABASE_HOST)/thoras?sslmode=disable"
         command: ["/bin/sh", "-c"]
         args:
           - |
