--- a/charts/thoras/templates/api-server-v2/deployment.yaml
+++ b/charts/thoras/templates/api-server-v2/deployment.yaml
@@ -125,6 +125,10 @@ spec:
             value: {{ not .Values.thorasWorker.enabled | quote }}
           - name: SERVICE_ENABLE_PPROF
             value: {{ .Values.thorasApiServerV2.pprof.enabled | quote }}
+          {{- with .Values.rbac.namespaces }}
+          - name: SERVICE_WATCH_NAMESPACES
+            value: {{ join "," . | quote }}
+          {{- end }}
         volumeMounts:
           - name: monitor-config
             mountPath: /app/config.yaml
