--- a/charts/thoras/templates/worker/deployment.yaml
+++ b/charts/thoras/templates/worker/deployment.yaml
@@ -98,6 +98,10 @@ spec:
             value: "{{ .Values.cluster.name }}"
           - name: SERVICE_QUERIES_PER_SECOND
             value: {{ .Values.thorasWorker.queriesPerSecond | default .Values.queriesPerSecond | quote }}
+          {{- with .Values.rbac.namespaces }}
+          - name: SERVICE_WATCH_NAMESPACES
+            value: {{ join "," . | quote }}
+          {{- end }}
         resources:
           limits:
             memory: {{ .Values.thorasWorker.limits.memory }}
