Default to timescale snapshots

--- a/charts/thoras/values.yaml
+++ b/charts/thoras/values.yaml
@@ -120,7 +120,7 @@ thorasApiServerV2:
     memory: 100Mi
   port: 80
   logLevel: "info"
-  timescaleSnapshotsPrimary: false
+  timescaleSnapshotsPrimary: true
   catalogRefreshInterval: "60s"
   cacheWindow: "10s"
   additionalPvSecurityContext: {}
