--- a/charts/thoras/values.yaml
+++ b/charts/thoras/values.yaml
@@ -238,6 +238,20 @@ thorasReasoning:
       cpu: 128m
       memory: 8Mi
 
+thorasSlmAgent:
+  enabled: false
+  serviceAccount:
+    name: thoras-slm-api
+  podAnnotations: {}
+  labels: {}
+  containerPort: 11434
+  port: 8080
+  limits:
+    memory: 8192Mi
+  requests:
+    cpu: 1024m
+    memory: 1024Mi
+
 # K8s client max queries per second
 queriesPerSecond: "50"
 
