--- a/charts/thoras/tests/all_deployments_test.yaml
+++ b/charts/thoras/tests/all_deployments_test.yaml
@@ -13,6 +13,8 @@ set:
     unittesting: true
   thorasReasoning:
     enabled: true
+  thorasSlmAgent:
+    enabled: true
 tests:
   - it: Object type correct
     asserts:
