--- a/charts/thoras/tests/collector_deployment_test.yaml
+++ b/charts/thoras/tests/collector_deployment_test.yaml
@@ -13,7 +13,7 @@ tests:
           value: metrics-collector
       - equal:
           path: spec.template.spec.containers[?(@.name == 'timescaledb')].image
-          value: us-east4-docker.pkg.dev/thoras-registry/platform/timescaledb-ha:pg16.10-ts2.21.3
+          value: us-east4-docker.pkg.dev/thoras-registry/platform/timescaledb:2.21.3-pg16
   - it: Default containers should match snapshots
     chart:
       version: "4.50.0"
