--- a/charts/thoras/templates/api-server-v2/deployment.yaml
+++ b/charts/thoras/templates/api-server-v2/deployment.yaml
@@ -109,6 +109,8 @@ spec:
             value: "http://thoras-blob-api.thoras.svc.cluster.local"
           - name: SERVICE_TIMESCALE_SNAPSHOTS_PRIMARY
             value: {{ .Values.thorasApiServerV2.timescaleSnapshotsPrimary | quote}}
+          - name: SERVICE_TIMESCALE_SNAPSHOTS_ONLY
+            value: {{ .Values.thorasApiServerV2.timescaleSnapshotsOnly | quote}}
           - name: SERVICE_QUERIES_PER_SECOND
             value: {{ .Values.thorasApiServerV2.queriesPerSecond | default .Values.queriesPerSecond | quote }}
           - name: SERVICE_CATALOG_REFRESH_INTERVAL
