--- a/charts/thoras/templates/worker/deployment.yaml
+++ b/charts/thoras/templates/worker/deployment.yaml
@@ -100,6 +100,10 @@ spec:
             value: {{ .Values.thorasWorker.queriesPerSecond | default .Values.queriesPerSecond | quote }}
           - name: SERVICE_CHART_VERSION
             value: {{ .Chart.Version | quote }}
+          - name: SERVICE_TIMESCALE_SNAPSHOTS_PRIMARY
+            value: {{ .Values.thorasWorker.timescaleSnapshotsPrimary | quote}}
+          - name: SERVICE_TIMESCALE_SNAPSHOTS_ONLY
+            value: {{ .Values.thorasWorker.timescaleSnapshotsOnly | quote}}
           {{- with .Values.rbac.namespaces }}
           - name: SERVICE_WATCH_NAMESPACES
             value: {{ join "," . | quote }}
