--- a/charts/thoras/values.yaml
+++ b/charts/thoras/values.yaml
@@ -144,6 +144,8 @@ thorasWorker:
     cpu: 128m
     memory: 100Mi
   logLevel: "info"
+  timescaleSnapshotsPrimary: true
+  timescaleSnapshotsOnly: false
 
 thorasDashboard:
   enabled: true
