Add watch namespace list to operator

--- a/charts/thoras/templates/operator/deployment.yaml
+++ b/charts/thoras/templates/operator/deployment.yaml
@@ -117,6 +117,10 @@ spec:
             value: {{ .Values.tolerations | toJson | quote }}
           - name: SERVICE_PORT
             value: {{ .Values.thorasOperator.prometheus.port | quote }}
+          {{- with .Values.rbac.namespaces }}
+          - name: SERVICE_WATCH_NAMESPACES
+            value: {{ join "," . | quote }}
+          {{- end }}
         command: [
           "/app/operator"
         ]
