--- a/charts/thoras/tests/secrets_collector_test.yaml
+++ b/charts/thoras/tests/secrets_collector_test.yaml
@@ -8,10 +8,10 @@ tests:
       slackWebhookUrlSecretRefKey: "url"
     asserts:
       - equal:
-          path: $..spec.containers[?(@.name == 'thoras-collector')].env[?(@.name == 'SERVICE_SLACK_WEBHOOK_URL')].valueFrom.secretKeyRef.name
+          path: $..spec.containers[?(@.name == 'thoras-blob-api')].env[?(@.name == 'SERVICE_SLACK_WEBHOOK_URL')].valueFrom.secretKeyRef.name
           value: "frou-frou"
       - equal:
-          path: $..spec.containers[?(@.name == 'thoras-collector')].env[?(@.name == 'SERVICE_SLACK_WEBHOOK_URL')].valueFrom.secretKeyRef.key
+          path: $..spec.containers[?(@.name == 'thoras-blob-api')].env[?(@.name == 'SERVICE_SLACK_WEBHOOK_URL')].valueFrom.secretKeyRef.key
           value: "url"
 
   - it: Points all apps to default slack secret, if no existing secret provided provided
@@ -19,8 +19,8 @@ tests:
       - collector/deployment.yaml
     asserts:
       - equal:
-          path: $..spec.containers[?(@.name == 'thoras-collector')].env[?(@.name == 'SERVICE_SLACK_WEBHOOK_URL')].valueFrom.secretKeyRef.name
+          path: $..spec.containers[?(@.name == 'thoras-blob-api')].env[?(@.name == 'SERVICE_SLACK_WEBHOOK_URL')].valueFrom.secretKeyRef.name
           value: "thoras-slack"
       - equal:
-          path: $..spec.containers[?(@.name == 'thoras-collector')].env[?(@.name == 'SERVICE_SLACK_WEBHOOK_URL')].valueFrom.secretKeyRef.key
+          path: $..spec.containers[?(@.name == 'thoras-blob-api')].env[?(@.name == 'SERVICE_SLACK_WEBHOOK_URL')].valueFrom.secretKeyRef.key
           value: "webhookUrl"
