Allow thoras to patch pods

--- a/charts/thoras/templates/api-server-v2/rbac.yaml
+++ b/charts/thoras/templates/api-server-v2/rbac.yaml
@@ -38,6 +38,7 @@ rules:
 - apiGroups:
   - apps
   - argoproj.io
+  - "" # core API group - pods, services, configmaps, secrets, etc.
   resources:
   - '*'
   verbs:
