feat: add new FORECAST_PREFER_ADJUSTED env var to forecast worker

--- a/charts/thoras/values.yaml
+++ b/charts/thoras/values.yaml
@@ -201,6 +201,7 @@ thorasForecast:
   serviceAccount:
     name: thoras-forecast-worker
   skipCache: false
+  preferAdjusted: false
   requests:
     cpu: "256m"
     memory: "256Mi"
