--- a/charts/thoras/templates/forecast-worker/deployment.yaml
+++ b/charts/thoras/templates/forecast-worker/deployment.yaml
@@ -66,7 +66,7 @@ spec:
             value: {{ (float64 (printf "%v" .)) | quote }}
             {{- end }}
           - name: FORECAST_IGNORE_NEW_PODS
-            value: {{ .Values.thorasForecast.preferAdjusted | ternary "true" "false" | quote }}
+            value: {{ .Values.thorasForecast.ignoreNewPods | ternary "true" "false" | quote }}
         resources:
           requests:
             cpu: {{ .Values.thorasForecast.worker.requests.cpu }}
