--- a/charts/thoras/values.yaml
+++ b/charts/thoras/values.yaml
@@ -201,7 +201,7 @@ thorasForecast:
   serviceAccount:
     name: thoras-forecast-worker
   skipCache: false
-  preferAdjusted: false
+  ignoreNewPods: false
   requests:
     cpu: "256m"
     memory: "256Mi"
