--- a/charts/thoras/tests/forecast_worker_test.yaml
+++ b/charts/thoras/tests/forecast_worker_test.yaml
@@ -59,6 +59,8 @@ tests:
               value: "600"
             - name: OMP_NUM_THREADS
               value: "1"
+            - name: FORECAST_IGNORE_NEW_PODS
+              value: "false"
 
   - it: sets RETRAIN_STEADY_STATE_HOURS when value is an integer
     set:
@@ -175,3 +177,22 @@ tests:
           content:
             name: RETRAIN_OVERRIDE_HOURS
             value: "0.1"
+
+  - it: renders FORECAST_IGNORE_NEW_PODS as false by default
+    asserts:
+      - contains:
+          path: spec.template.spec.containers[0].env
+          content:
+            name: FORECAST_IGNORE_NEW_PODS
+            value: "false"
+
+  - it: renders FORECAST_IGNORE_NEW_PODS as true when ignoreNewPods is true
+    set:
+      thorasForecast:
+        ignoreNewPods: true
+    asserts:
+      - contains:
+          path: spec.template.spec.containers[0].env
+          content:
+            name: FORECAST_IGNORE_NEW_PODS
+            value: "true"
