Add flag for enabling auto-sizing of metric snapshot chunks

--- a/charts/thoras/templates/worker/deployment.yaml
+++ b/charts/thoras/templates/worker/deployment.yaml
@@ -108,6 +108,10 @@ spec:
           - name: SERVICE_WATCH_NAMESPACES
             value: {{ join "," . | quote }}
           {{- end }}
+          {{- if .Values.thorasWorker.enableSnapshotChunkAutoSizing }}
+          - name: SERVICE_CHUNK_INTERVAL_UPDATER_DRY_RUN
+            value: "false"
+          {{- end }}
           - name: SERVICE_PORT
             value: {{ .Values.thorasWorker.prometheus.port | quote }}
         ports:
