Pass collector memory request to worker

--- a/charts/thoras/templates/worker/deployment.yaml
+++ b/charts/thoras/templates/worker/deployment.yaml
@@ -112,6 +112,8 @@ spec:
           - name: SERVICE_CHUNK_INTERVAL_UPDATER_DRY_RUN
             value: "false"
           {{- end }}
+          - name: SERVICE_COLLECTOR_MEM_REQUEST
+            value: "{{ .Values.metricsCollector.timescale.requests.memory | default "3072Mi" }}"
           - name: SERVICE_PORT
             value: {{ .Values.thorasWorker.prometheus.port | quote }}
         ports:
