--- a/charts/thoras/tests/api_service_deployment_test.yaml
+++ b/charts/thoras/tests/api_service_deployment_test.yaml
@@ -35,3 +35,36 @@ tests:
       - equal:
           path: $.spec.template.spec.containers[0].env[?(@.name == 'SERVICE_RESTART_WORKLOAD_ON_CPU')].value
           value: "true"
+  - it: Should not have annotations section when all conditions are false
+    set:
+      thorasApiServerV2:
+        prometheus:
+          enabled: false
+        podAnnotations: {}
+    asserts:
+      - notExists:
+          path: spec.template.metadata.annotations
+  - it: Should have annotations section when prometheus is enabled
+    set:
+      thorasApiServerV2:
+        prometheus:
+          enabled: true
+    asserts:
+      - exists:
+          path: spec.template.metadata.annotations
+      - equal:
+          path: spec.template.metadata.annotations["prometheus.io/scrape"]
+          value: "true"
+  - it: Should have annotations section when podAnnotations are set
+    set:
+      thorasApiServerV2:
+        prometheus:
+          enabled: false
+        podAnnotations:
+          custom-annotation: "test-value"
+    asserts:
+      - exists:
+          path: spec.template.metadata.annotations
+      - equal:
+          path: spec.template.metadata.annotations["custom-annotation"]
+          value: "test-value"
