--- a/charts/thoras/tests/operator_deployment_test.yaml
+++ b/charts/thoras/tests/operator_deployment_test.yaml
@@ -108,3 +108,37 @@ tests:
       - equal:
           path: $.spec.template.spec.containers[0].env[?(@.name == 'SERVICE_FORECAST_RESOURCE_LIMITS_MEMORY')].value
           value: "2Gi"
+  - it: Should not have annotations section when all conditions are false
+    set:
+      thorasOperator:
+        prometheus:
+          enabled: false
+        podAnnotations: {}
+    asserts:
+      - notExists:
+          path: spec.template.metadata.annotations
+  - it: Should have annotations section when prometheus is enabled
+    set:
+      thorasOperator:
+        prometheus:
+          enabled: true
+          port: 8080
+    asserts:
+      - exists:
+          path: spec.template.metadata.annotations
+      - equal:
+          path: spec.template.metadata.annotations["prometheus.io/scrape"]
+          value: "true"
+  - it: Should have annotations section when podAnnotations are set
+    set:
+      thorasOperator:
+        prometheus:
+          enabled: false
+        podAnnotations:
+          custom-annotation: "test-value"
+    asserts:
+      - exists:
+          path: spec.template.metadata.annotations
+      - equal:
+          path: spec.template.metadata.annotations["custom-annotation"]
+          value: "test-value"
