--- a/charts/thoras/templates/api-server-v2/deployment.yaml
+++ b/charts/thoras/templates/api-server-v2/deployment.yaml
@@ -124,6 +124,10 @@ spec:
           - name: SERVICE_WATCH_NAMESPACES
             value: {{ join "," . | quote }}
           {{- end }}
+          - name: SERVICE_ENABLE_FORECAST_AFFINITY
+            value: {{ .Values.thorasApiServerV2.enableForecastAffinity | quote }}
+          - name: SERVICE_FORECAST_AFFINITY_THRESHOLD
+            value: {{ .Values.thorasApiServerV2.forecastAffinityThreshold | default "2m" | quote }}
         volumeMounts:
           - name: monitor-config
             mountPath: /app/config.yaml
