--- a/charts/thoras/values.yaml
+++ b/charts/thoras/values.yaml
@@ -118,6 +118,7 @@ thorasApiServerV2:
   prometheus:
     enabled: true
   restartWorkloadOnCpu: false
+  enableForecastAffinity: false
   pprof:
     enabled: false
 
