--- a/charts/thoras/templates/forecast-worker/deployment.yaml
+++ b/charts/thoras/templates/forecast-worker/deployment.yaml
@@ -67,6 +67,8 @@ spec:
             {{- end }}
           - name: FORECAST_IGNORE_NEW_PODS
             value: {{ .Values.thorasForecast.ignoreNewPods | ternary "true" "false" | quote }}
+          - name: SERVICE_ENABLE_FORECAST_AFFINITY
+            value: {{ .Values.thorasApiServerV2.enableForecastAffinity | quote }}
         resources:
           requests:
             cpu: {{ .Values.thorasForecast.worker.requests.cpu }}
