--- a/charts/thoras/templates/crd/aiscaletarget.yaml
+++ b/charts/thoras/templates/crd/aiscaletarget.yaml
@@ -578,7 +578,7 @@ spec:
               model:
                 properties:
                   forecast_blocks:
-                    default: 20m0s
+                    default: 15m0s
                     description: Time duration for how far into the future Thoras
                       should forecast into.
                     type: string
@@ -590,7 +590,7 @@ spec:
                     type: string
                     x-kubernetes-int-or-string: true
                   forecast_cron:
-                    default: '*/10 * * * *'
+                    default: '*/15 * * * *'
                     type: string
                   mode:
                     description: While Thoras models always bias for reliability,
@@ -629,6 +629,55 @@ spec:
                   namespace:
                     type: string
                 type: object
+              selector:
+                description: |-
+                  A label selector is a label query over a set of resources. The result of matchLabels and
+                  matchExpressions are ANDed. An empty label selector matches all objects. A null
+                  label selector matches no objects.
+                properties:
+                  matchExpressions:
+                    description: matchExpressions is a list of label selector requirements.
+                      The requirements are ANDed.
+                    items:
+                      description: |-
+                        A label selector requirement is a selector that contains values, a key, and an operator that
+                        relates the key and values.
+                      properties:
+                        key:
+                          description: key is the label key that the selector applies
+                            to.
+                          type: string
+                        operator:
+                          description: |-
+                            operator represents a key's relationship to a set of values.
+                            Valid operators are In, NotIn, Exists and DoesNotExist.
+                          type: string
+                        values:
+                          description: |-
+                            values is an array of string values. If the operator is In or NotIn,
+                            the values array must be non-empty. If the operator is Exists or DoesNotExist,
+                            the values array must be empty. This array is replaced during a strategic
+                            merge patch.
+                          items:
+                            type: string
+                          type: array
+                          x-kubernetes-list-type: atomic
+                      required:
+                      - key
+                      - operator
+                      type: object
+                    type: array
+                    x-kubernetes-list-type: atomic
+                  matchLabels:
+                    additionalProperties:
+                      type: string
+                    description: |-
+                      matchLabels is a map of {key,value} pairs. A single {key,value} in the matchLabels
+                      map is equivalent to an element of matchExpressions, whose key field is "key", the
+                      operator is "In", and the values array contains only "value". The requirements are ANDed.
+                    type: object
+                type: object
+                x-kubernetes-map-type: atomic
               vertical:
                 properties:
                   containers:
@@ -749,7 +798,6 @@ spec:
                 type: object
             required:
             - model
-            - scaleTargetRef
             type: object
           status:
             properties:
