--- a/charts/thoras/templates/worker/deployment.yaml
+++ b/charts/thoras/templates/worker/deployment.yaml
@@ -117,6 +117,10 @@ spec:
             value: "{{ .Values.metricsCollector.timescale.requests.memory | default "3072Mi" }}"
           - name: SERVICE_PORT
             value: {{ .Values.thorasWorker.prometheus.port | quote }}
+          - name: SERVICE_ENABLE_FORECAST_AFFINITY
+            value: {{ .Values.thorasApiServerV2.enableForecastAffinity | quote }}
+          - name: SERVICE_FORECAST_AFFINITY_THRESHOLD
+            value: {{ .Values.thorasApiServerV2.forecastAffinityThreshold | default "2m" | quote }}
         ports:
           - name: http-metrics
             containerPort: {{ .Values.thorasWorker.prometheus.port }}
