Enable direct queueing of forecasts

--- a/charts/thoras/values.yaml
+++ b/charts/thoras/values.yaml
@@ -139,7 +139,7 @@ thorasWorker:
     enabled: true
     port: 9102
   enableSnapshotChunkAutoSizing: false
-  enableDirectForecastQueueing: false
+  enableDirectForecastQueueing: true
 
 thorasDashboard:
   enabled: true
