--- a/charts/thoras/templates/worker/deployment.yaml
+++ b/charts/thoras/templates/worker/deployment.yaml
@@ -113,6 +113,10 @@ spec:
           - name: SERVICE_CHUNK_INTERVAL_UPDATER_DRY_RUN
             value: "false"
           {{- end }}
+          {{- with .Values.thorasWorker.riverLogLevel }}
+          - name: SERVICE_RIVER_LOG_LEVEL
+            value: {{ . | quote }}
+          {{- end }}
           {{- if .Values.thorasWorker.enableDirectForecastQueueing }}
           - name: SERVICE_ENABLE_FORECAST_QUEUE_DIRECT
             value: "true"
