--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,6 +18,8 @@ jobs:
         uses: actions/checkout@v4
       - name: Setup Helm
         uses: azure/setup-helm@v4.2.0
+        with:
+          version: 'v3.19.2'
       - name: Install Helm Unittest
         run: helm plugin install https://github.com/helm-unittest/helm-unittest.git
       - name: Run Helm Unit Tests
