add debug flag to disable view cache refresh

--- a/charts/thoras/templates/worker/deployment.yaml
+++ b/charts/thoras/templates/worker/deployment.yaml
@@ -129,6 +129,8 @@ spec:
             value: {{ .Values.thorasApiServerV2.enableForecastAffinity | quote }}
           - name: SERVICE_FORECAST_AFFINITY_THRESHOLD
             value: {{ .Values.thorasApiServerV2.forecastAffinityThreshold | default "2m" | quote }}
+          - name: SERVICE_ENABLE_AST_VIEW_CACHE_REFRESH_WORKER
+            value: {{ .Values.thorasWorker.enableAstViewCacheRefreshWorker | quote }}
         ports:
           - name: http-metrics
             containerPort: {{ .Values.thorasWorker.prometheus.port }}
