--- a/charts/thoras/values.yaml
+++ b/charts/thoras/values.yaml
@@ -140,6 +140,8 @@ thorasWorker:
     port: 9102
   enableSnapshotChunkAutoSizing: false
   enableDirectForecastQueueing: true
+  # Cost will not work in the dashboard if this is disabled. Used for debugging purposes.
+  enableAstViewCacheRefreshWorker: true
 
 thorasDashboard:
   enabled: true
